# witness

./: .checkov.yml  .containerignore  .dockerignore  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  ARCHITECTURE.md  Containerfile  Containerfile.pre-commit  LICENSE  README.md  SECURITY.md  codecov.yml  podman-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.githooks/: pre-commit
.github/workflows/: crusher.yml  data.yml  laforge.yml  picard.yml  q.yml  riker.yml  tasha.yml  troi.yml  worf.yml
alembic/: env.py
alembic/versions/: 20241119_01_add_users_and_verification_url.py  20251115_01_add_is_active_to_certifications.py  20251123_01_add_blog_tables.py
buildspec/: plan.yml  validate.yml
container/: .env.example  Caddyfile  Containerfile  Dockerfile  Dockerfile.pre-commit  docker-compose.yml  podman-compose.yml
deploy/azure/bicep/AKS/: main.bicep  parameters.production.bicepparam
deploy/azure/prometheus-rules/: public-status.yaml
deploy/grafana/: README.md
deploy/k8s/: deploy.yaml  lets-encrypt-issuer.yaml
deploy/terraform/aks/: .terraform.lock.hcl  README.md  backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
deploy/terraform/aks/environments/: dev.tfvars  (+1 more)
deploy/terraform/container-apps/: .terraform.lock.hcl  README.md  backend.tf  outputs.tf  versions.tf
docs/: admin-setup.md  architecture.md  certification-management.md  deployment.md  overview.md  pre-commit.md  status-dashboard-implementation.md  status-dashboard-setup.md  tooling.md  variables.md
docs/aws/: setup.md
fitness/: auth.py  config.py  constants.py  database.py  database_async.py  db_events.py  main.py  staticfiles.py
fitness/config/: .gitkeep
fitness/data/: resume-data.yaml
fitness/middleware/: __init__.py  security.py
fitness/models/: blog.py  certification.py  security.py  user.py
fitness/observability/: __init__.py  logging.py  metrics.py  safe_metrics.py  tracing.py
fitness/routers/: admin.py  ai_query.py  api.py  astrometrics.py  blog.py  captains_log.py  contact.py  reports.py  security_dashboard.py  stargazing.py  status.py  ui.py
fitness/schemas/: blog.py  certification.py  contact.py  open_badges.py  user.py
fitness/security/: __init__.py  csrf.py  forms.py  utils.py
fitness/services/: agent_service.py  astrometrics.py  blog_service.py  captains_log.py  celestrak.py  cve_aggregator.py  data_store.py  exoplanet.py  geolocation.py  glsa_parser.py  mailer.py  mars_rover.py  nist_client.py  noaa_space_weather.py  open_badges.py  pdf_resume.py  rag_service.py  report_status.py  security_feed.py  sky_service.py  status_metrics.py  storage.py
fitness/static/: styles.css  styles.css.map  styles.scss
fitness/static/css/: blog.css  security.css
fitness/templates/: 401.html  404.html  503.html  admin_base.html  admin_certs.html  admin_dashboard.html  admin_login.html  admin_media.html  base.html  certificate_pdf.html  certifications.html  contact_lcars.html  home.html  resume.html  status.html  verification.html
fitness/templates/astrometrics/: dashboard.html
fitness/templates/blog/: log_entry.html  log_entry_card.html  log_index.html  search_results.html
fitness/templates/captains_log/: dashboard.html  entry.html
fitness/templates/partials/: badge_preview.html
fitness/templates/reports/: index.html
fitness/templates/security/: advisories_list.html  advisory_detail.html  dashboard.html  stats_widget.html  top_advisories.html
fitness/templates/stargazing/: dashboard.html
fitness/utils/: assets.py  yaml_loader.py
k8s/: deploy.yaml  lets-encrypt-issuer.yaml
lambda/functions/embed_sync/: handler.py
lambda/functions/ingest_nasa/: handler.py
lambda/functions/ingest_nist/: handler.py
lambda/functions/ingest_space/: handler.py
lambda/functions/rotate_secret/: handler.py
lambda/shared/: dynamo_writer.py  models.py
scripts/: check_dry.py  check_secrets.py  docker-entrypoint.sh  generate-security-reports.py  precommit_log.sh  update_grafana_snapshot.py  update_readme.py  utils.py
terraform/aws/bootstrap/: bootstrap.tfvars.example  main.tf  variables.tf  versions.tf
terraform/aws/dev/: backend.tf  main.tf  terraform.tfvars  variables.tf
terraform/aws/prod/: .terraform.lock.hcl  backend.tf  main.tf  terraform.tfvars  variables.tf
terraform/azure/dev/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  variables.tf
terraform/azure/prod/: backend.tf  main.tf  outputs.tf  variables.tf
terraform/bootstrap/: main.tf  outputs.tf  variables.tf
terraform/container-apps/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/dev/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/dev/tests/: variables.tftest.hcl
terraform/modules/app-runner/: main.tf  outputs.tf  variables.tf
terraform/modules/codepipeline/: variables.tf
terraform/modules/dns/: main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/networking/: main.tf  variables.tf
terraform/modules/observability/: .terraform.lock.hcl  main.tf  variables.tf
terraform/modules/security/: main.tf  outputs.tf  variables.tf
terraform/prod/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
tests/: README.md  TESTING_GUIDE.md  conftest.py  test_401.py  test_404.py  test_503.py  test_admin_certs.py  test_app_client.py  test_astrometrics.py  test_captains_log.py  test_constants.py  test_data_store.py  test_dry.py  test_integration.py  test_lambda_handlers.py  test_media.py  test_middleware.py  test_nist_cve.py  test_open_badges.py  test_report_status.py  test_schemas.py  test_security_dashboard.py  test_security_hardening.py  test_smoke.py  test_space_services.py  test_stargazing.py  test_status_routes.py  test_terraform.py  test_ui_routes.py  test_utils.py
tests/data/: gentoo_feed_sample.xml
tests/routers/: test_all_routers.py  test_blog.py  test_ui.py
tests/security/: test_csrf.py
tools/: __init__.py  build_styles.py  check_dry.py  check_secrets.py  create_admin_user.py  crop_pdf_borders.py  db_upgrade.py  generate-security-reports.py  update_readme.py  utils.py
(+50 files in other folders)
