[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "witness"
version = "0.1.0"
description = "Witness fitness tracking application"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]==0.115.4",
  "uvicorn[standard]==0.32.0",
  "aiosqlite==0.20.0",
  "gunicorn==23.0.0",
  "jinja2==3.1.6",
  "python-multipart==0.0.7",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "SQLAlchemy==2.0.36",
  "alembic==1.14.0",
  "reportlab==4.2.5",
  "PyYAML==6.0.2",
  "qrcode[pil]==7.4.2",
  "Pillow==10.4.0",
  "dnspython==2.6.1",
  "itsdangerous==2.2.0",
  "httpx==0.27.2",
  "fastapi-users[sqlalchemy]==12.1.3",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.1.3",
  "email-validator==2.1.1",
  "setuptools>=70.0.0,<81",
  "libsass==0.23.0",
  "slowapi==0.1.9",
  "asgi-correlation-id==4.3.1",
  "python-json-logger==2.0.7",
  "prometheus-client==0.20.0",
  "opentelemetry-sdk==1.27.0",
  "opentelemetry-exporter-otlp==1.27.0",
  "opentelemetry-instrumentation-fastapi==0.48b0",
  "opentelemetry-instrumentation-sqlalchemy==0.48b0",
  "opentelemetry-instrumentation-httpx==0.48b0",
  "defusedxml==0.7.1",
  "bokeh==3.5.0",
  "lxml==5.3.0",
  "python-dateutil==2.9.0",
  "aiofiles==23.2.1",
  "markdown==3.7",
  "pygments==2.18.0",
  "python-frontmatter==1.1.0",
  "python-slugify==8.0.4",
]

[dependency-groups]
dev = [
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "pytest-xdist==3.5.0",
  "pytest-asyncio==0.23.0",
  "pytest-mock==3.12.0",
  "coverage[toml]==7.4.0",
  "black==24.10.0",
  "pre-commit==3.7.1",
  "mypy==1.11.2",
  "isort==5.13.2",
  "types-PyYAML==6.0.12.20240917",
  "pylint==3.2.6",
  "ruff==0.14.4",
  "autoflake==2.3.1",
]
security = [
  "bandit==1.7.10",
  "pip-audit==2.7.3",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
addopts = [
  "-v",
  "--tb=short",
  "--strict-markers",
  "--cov=fitness",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=html",
  "--cov-report=json",
  "--cov-report=xml",
]
testpaths = [
  "tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
  "ignore:pkg_resources is deprecated as an API.*:UserWarning:passlib.pwd",
]

[tool.coverage.run]
source = ["fitness"]
omit = [
  "*/tests/*",
  "*/__init__.py",
  "*/conftest.py",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "S",
  "SIM",
]
ignore = [
  "S101", # allow assert statements outside tests
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.12"
files = ["fitness/constants.py"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
exclude = ["^alembic/", "^\\.venv/"]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]

[tool.setuptools.packages.find]
include = ["fitness*"]
