[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "witness"
version = "0.1.0"
description = "Witness fitness tracking application"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]==0.128.4",
  "starlette>=0.52.0",
  "uvicorn[standard]==0.32.0",
  "aiosqlite==0.20.0",
  "gunicorn==23.0.0",
  "jinja2==3.1.6",
  "python-multipart==0.0.22",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "SQLAlchemy==2.0.36",
  "alembic==1.14.0",
  "reportlab==4.2.5",
  "PyYAML==6.0.2",
  "qrcode[pil]==7.4.2",
  "Pillow==12.1.0",
  "dnspython==2.6.1",
  "itsdangerous==2.2.0",
  "httpx==0.27.2",
  "fastapi-users[sqlalchemy]==15.0.4",
  "email-validator==2.1.1",
  "setuptools>=70.0.0,<81",
  "libsass==0.23.0",
  "slowapi==0.1.9",
  "asgi-correlation-id==4.3.1",
  "python-json-logger==2.0.7",
  "prometheus-client==0.20.0",
  "opentelemetry-sdk==1.39.1",
  "opentelemetry-exporter-otlp==1.39.1",
  "opentelemetry-instrumentation-fastapi==0.60b1",
  "opentelemetry-instrumentation-sqlalchemy==0.60b1",
  "opentelemetry-instrumentation-httpx==0.60b1",
  "protobuf>=5.29.6",
  "bokeh==3.8.2",
  "python-dateutil==2.9.0",
  "aiofiles==23.2.1",
  "markdown==3.7",
  "pygments==2.18.0",
  "python-frontmatter==1.1.0",
  "python-slugify==8.0.4",
  "boto3>=1.38.0",
  "openai>=1.40.0",
  "azure-search-documents>=11.6.0",
  "sgp4>=2.23",
  "ephem>=4.1.6",
]

[dependency-groups]
dev = [
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "pytest-xdist==3.5.0",
  "pytest-asyncio==0.23.0",
  "pytest-mock==3.12.0",
  "coverage[toml]==7.4.0",
  "black==24.10.0",
  "pre-commit==3.7.1",
  "mypy==1.11.2",
  "isort==5.13.2",
  "types-PyYAML==6.0.12.20240917",
  "pylint==3.2.6",
  "ruff==0.14.4",
  "autoflake==2.3.1",
]
security = [
  "bandit==1.7.10",
  "pip-audit==2.7.3",
]

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "-q",
  "--tb=short",
  "--strict-markers",
]
testpaths = [
  "tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = []

[tool.coverage.run]
source = ["fitness"]
omit = [
  "*/tests/*",
  "*/__init__.py",
  "*/conftest.py",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "S",
  "SIM",
]
ignore = [
  "S101", # allow assert statements outside tests
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.13"
files = ["fitness/constants.py"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
exclude = ["^alembic/", "^\\.venv/"]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]

[tool.setuptools.packages.find]
include = ["fitness*"]
